@@ -1,3 +1,4 @@
+* BUG#8164 Correction de l'affichage des champs migrés dans les résumés d'avenants
 * BUG#8200 Pouvoir réactiver un contrat sans effet en utilisant l'avenant réactiver contrat
 * BUG#8147 Permettre la résiliation de contrats suspendus
 * BUG#8041 La date d'effet de l'avenant doit être postérieure à la date d'effet initiale, et non pas seulement à la date d'effet courante
